@@ -38,19 +38,19 @@ Style/FileName:
 Style/MutableConstant:
   Exclude:
     - 'lib/selenium/webdriver/common/socket_poller.rb'
-    - 'lib/selenium/webdriver/remote/bridge.rb'
+    - 'lib/selenium/webdriver/remote/legacy_bridge.rb'
     - 'lib/selenium/webdriver/remote/w3c_bridge.rb'
 
 # TODO: Refactor Chrome::Bridge#create_capabilities
 Metrics/PerceivedComplexity:
   Max: 11
   Exclude:
-    - 'lib/selenium/webdriver/chrome/bridge.rb'
+    - 'lib/selenium/webdriver/chrome/legacy_bridge.rb'
 
 Metrics/CyclomaticComplexity:
   Max: 9
   Exclude:
-    - 'lib/selenium/webdriver/chrome/bridge.rb'
+    - 'lib/selenium/webdriver/chrome/legacy_bridge.rb'
     - 'lib/selenium/webdriver/common/driver.rb'
     - 'spec/integration/selenium/webdriver/spec_support/test_environment.rb'
 
@@ -58,7 +58,7 @@ Metrics/ClassLength:
   Max: 140
   Exclude:
     - 'lib/selenium/webdriver/firefox/profile.rb'
-    - 'lib/selenium/webdriver/remote/bridge.rb'
+    - 'lib/selenium/webdriver/remote/legacy_bridge.rb'
     - 'lib/selenium/webdriver/remote/capabilities.rb'
     - 'lib/selenium/webdriver/remote/w3c_bridge.rb'
     - 'spec/integration/selenium/webdriver/spec_support/test_environment.rb'
@@ -66,7 +66,7 @@ Metrics/ClassLength:
 Metrics/AbcSize:
   Max: 33
   Exclude:
-    - 'lib/selenium/webdriver/chrome/bridge.rb'
+    - 'lib/selenium/webdriver/chrome/legacy_bridge.rb'
     - 'lib/selenium/webdriver/support/color.rb'
 
 Metrics/LineLength:
@@ -80,4 +80,4 @@ Metrics/ModuleLength:
 Metrics/MethodLength:
   Max: 33
   Exclude:
-    - 'lib/selenium/webdriver/chrome/bridge.rb'
+    - 'lib/selenium/webdriver/chrome/legacy_bridge.rb'
